[package]
name = "pi-simple-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
clap = { version = "4.4.5", features = ["derive"] }
prometheus-client = "0.21.2"
tokio = { version = "1.32.0", features = ["full"] }
yarte = { version = "0.15.7", features = ["buf-min", "html-min", "bytes-buf"] }

[build-dependencies]
yarte = { version = "0.15.7", features = ["buf-min", "html-min", "bytes-buf"] }

[profile.release]
lto = "fat"
strip = "symbols"
